* Updated license to what we intended    * Updated process for building rpm, you now run redhat/make-rpm.sh      This creates the Release.info and Changelog.mtn files for installation,      and makes sure the version is 0.YYYY.MM.DD
COPYING: Updates to be pure BSD, noting the few BSD licensed things we derived
  from.

COPYING.{BSD,LGPL}: Now obsolete, LGPL no longer applies, BSD is in COPYING

redhat/Lintel.spec.in: renamed from Lintel.spec, updated to have substitutable
  __VERSION__, and to fix the description and license information.

Makefile.am: install the COPYING file under .../doc/Lintel

FindLibXmlpp.cmake: include license file in here rather than ref to
  non-existant file.

make-dist.sh: updates that will hopefully work but not yet tested to build
  Release.info and Changelog.mtn files in the tar distributions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,10 @@ cmakemodules_DATA = \
 	cmake-modules/FindLintel.cmake \
 	cmake-modules/FindLibXmlpp.cmake
 
+linteldocdir = $(datadir)/doc/Lintel
+linteldoc_DATA = \
+	COPYING 
+
 # Magic to make autoreconf find com_hp_hpl_lintel.m4
 # Sadly, we can't use this in other packages because the proper -I depends
 # on where we are installing.
