* Update AssertBoost so that we can have a special boost signal on      assertions so an arbitrary set of things can run when assertions fire.    * Modify PThread.[CH] to use AssertBoost.    * Fix up autoconf requirements/dependencies to match with this change.
com_hp_hpl_lintel.m4: WITH_BOOST_INCLUDES goes to just WITH_BOOST since
  boost::signal has a library also.  Not yet testing for that though.

configure.ac: rename from WITH_BOOST_INCLUDES to WITH_BOOST.

AssertBoost.H: add in a somewhat hacky function that allows us to add in
  handlers for a boost::signal; I'm pretty sure this isn't the right
  interface so far.  Modify DEBUG_CHECK so that if we are compiling without
  debugging assertions, it is turned off entirely.

PThread.[CH]: Modify from LintelAssert to AssertBoost

include/Makefile.am: WITH_BOOST_INCLUDES -> WITH_BOOST

src/Makefile.am: WITH_BOOST_INCLUDES -> WITH_BOOST; libLintelPThread now
  requires boost support, so only gets built in that case.

--- a/configure.ac
+++ b/configure.ac
@@ -53,7 +53,7 @@ HPL_WITHLIB_GC()
 AC_PROG_AWK
 AC_PATH_PROG([AWK_PATH],[$AWK])
 AC_LANG(C++)
-HPL_WITH_BOOST_INCLUDES
+HPL_WITH_BOOST
 AC_MSG_CHECKING([if we have cycle counter access])
 
 save_CPPFLAGS=$CPPFLAGS
@@ -173,7 +173,7 @@ if test "$with_gc" = yes; then
    LINTEL_FEATURES="gc $LINTEL_FEATURES"
 fi
 
-if test "$with_boost_includes" = yes; then
+if test "$with_boost" = yes; then
    LINTEL_FEATURES="boost $LINTEL_FEATURES"
 fi
 
