--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -38,7 +38,7 @@ if ENABLE_STDIO64
 nobase_include_HEADERS += Lintel/stdio_64.H 
 endif
 
-if WITH_BOOST_INCLUDES
+if WITH_BOOST
 nobase_include_HEADERS += Lintel/AssertBoost.H
 endif
 
