* Fix all of the remaining bits that need to have -I.../Lintel to compile
*.[CH]: Add in Lintel/ to include things

src/Makefile.am: remove -I.../include/Lintel
src/lintel-config.in: remove -I.../include/Lintel

--- a/src/lintel-config.in
+++ b/src/lintel-config.in
@@ -38,7 +38,7 @@ exit 1
 
 case "$1" in
     --cflags)
-    	echo "-I${includedir}/Lintel -I${includedir} @TCL_CFLAGS@ @GC_CFLAGS@"
+    	echo "-I${includedir} @TCL_CFLAGS@ @GC_CFLAGS@"
 	exit 0
     	;;
     --libtool-libs)
