common.pm: extent file_older so that if the file doesn't exist, it is   automatically considered older.  put in a TODO around deprecating   the destfile_out_of_date function.  Check to make sure the file exists   before we call abs_path -- it does the wrong thing if the file doesn't   exist.
batch-parallel.in: document file_older.

mercury-plot.in: Allow commands to be indented (whitespace prefix)
  Give a warning if we didn't find the closing history marker; 
  extend sqlplot to support cdf plots.  Document that, and add documentation
  for plottitle.

--- a/src/batch-parallel.in
+++ b/src/batch-parallel.in
@@ -589,6 +589,11 @@ the command that is about to be executed.  If the command fails, the
 function will not return.  It is therefore useful for writing
 replacement rebuild_thing_do functions.
 
+=head3 sub file_older($this, $file, @inputs)
+
+This function will determine if $file is older than any of @inputs.
+If $file doesn't exist, it is considered older.
+
 =head1 TODO
 
 Ought to have a function that lets rebuild_thing_fail decide to stop
